Fixed camera controls being covered up by bottom nav

--- a/imports/ui/pages/participate.scss
+++ b/imports/ui/pages/participate.scss
@@ -43,6 +43,11 @@
     padding: 1vw;
   }
 
+  .camera-controls {
+    // this margin matches the height of the bottom nav bar, so it wont overlap the camera icon
+    margin-bottom: 52px;
+  }
+
   .left-control {
     position: absolute;
     margin-top: 10px;
